[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprout Lands - Sprites - Basic pack/FIRSTPOLA.png" type="Texture" id=1]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/istockphoto-1414387471-612x612.jpg" type="Texture" id=2]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/pixil-frame-0 (3).png" type="Texture" id=3]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/sponge.png" type="Texture" id=4]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/Sprite-0013.png" type="Texture" id=5]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/pixil-frame-0.png" type="Texture" id=6]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/pixil-frame-0 (1).png" type="Texture" id=7]
[ext_resource path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Objects/pixil-frame-0 (2).png" type="Texture" id=8]
[ext_resource path="res://Washcar.gd" type="Script" id=9]
[ext_resource path="res://gamemusic.mp3" type="AudioStream" id=10]

[sub_resource type="StreamTexture" id=66]
load_path = "res://.import/car clean.png-a55a9471a955dc29187332a332be7c0e.stex"

[sub_resource type="CircleShape2D" id=2]
radius = 2.19935

[sub_resource type="CircleShape2D" id=3]
radius = 2.09093

[sub_resource type="CircleShape2D" id=4]
radius = 25.61

[sub_resource type="CircleShape2D" id=5]
radius = 2.58115

[sub_resource type="CircleShape2D" id=6]
radius = 2.68207

[sub_resource type="CircleShape2D" id=7]
radius = 2.2219

[sub_resource type="CircleShape2D" id=1]
radius = 20.9006

[sub_resource type="ImageTexture" id=8]

[node name="WashCar" type="Node2D"]
pause_mode = 2
script = ExtResource( 9 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 248, 152 )
rotation = 3.14159
scale = Vector2( 0.69492, -0.749495 )
texture = ExtResource( 2 )

[node name="Dirty Car" type="Sprite" parent="."]
position = Vector2( 248, 152 )
scale = Vector2( 0.843427, 0.843427 )
texture = SubResource( 66 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 184, 176 )
rotation = 3.14159
scale = Vector2( 7.27487, -6.23215 )
texture = ExtResource( 6 )

[node name="Area2D1" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D1"]
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 224, 200 )
scale = Vector2( 7.65208, 6.79073 )
texture = ExtResource( 7 )

[node name="Area2D2" type="Area2D" parent="Sprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/Area2D2"]
shape = SubResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 288, 192 )
rotation = 3.14159
scale = Vector2( 9.1643, -8.80406 )
texture = ExtResource( 8 )

[node name="Area2D3" type="Area2D" parent="Sprite3"]
scale = Vector2( 0.45626, 0.683798 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Area2D3"]
scale = Vector2( 0.208247, 0.123082 )
shape = SubResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 280, 136 )
rotation = 3.14159
scale = Vector2( 6.19878, -8.05106 )
texture = ExtResource( 3 )

[node name="Area2D4" type="Area2D" parent="Sprite4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/Area2D4"]
shape = SubResource( 5 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 216, 128 )
scale = Vector2( 5.96554, -5.88507 )
texture = ExtResource( 6 )

[node name="Area2D5" type="Area2D" parent="Sprite5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite5/Area2D5"]
shape = SubResource( 6 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 184, 232 )
rotation = 3.14159
scale = Vector2( 5.0665, 5.11772 )
texture = ExtResource( 7 )

[node name="Area2D6" type="Area2D" parent="Sprite6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite6/Area2D6"]
shape = SubResource( 7 )

[node name="Water" type="Sprite" parent="."]
position = Vector2( 96, 232 )
rotation = 3.14159
scale = Vector2( 1.14829, -1.07275 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Water"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/Area2D"]
shape = SubResource( 1 )

[node name="ButtonSponge" type="Button" parent="."]
anchor_bottom = 0.189
margin_left = 48.0
margin_top = 120.0
margin_right = 170.0
margin_bottom = 210.0
rect_scale = Vector2( 0.378062, 0.341304 )
toggle_mode = true
icon = ExtResource( 4 )

[node name="Sponge" type="Sprite" parent="ButtonSponge"]
texture = SubResource( 8 )

[node name="Back" type="Button" parent="."]
margin_left = 416.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 68.0
text = "<<"

[node name="Polaroid" type="Sprite" parent="."]
visible = false
position = Vector2( 256, 144 )
scale = Vector2( 0.374749, 0.374749 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
autoplay = true

[connection signal="input_event" from="Sprite/Area2D1" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D1" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D1" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Sprite2/Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="mouse_entered" from="Sprite2/Area2D2" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2/Area2D2" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Sprite3/Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="mouse_entered" from="Sprite3/Area2D3" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite3/Area2D3" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Sprite4/Area2D4" to="." method="_on_Area2D4_input_event"]
[connection signal="mouse_entered" from="Sprite4/Area2D4" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite4/Area2D4" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Sprite5/Area2D5" to="." method="_on_Area2D5_input_event"]
[connection signal="mouse_entered" from="Sprite5/Area2D5" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite5/Area2D5" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Sprite6/Area2D6" to="." method="_on_Area2D6_input_event"]
[connection signal="mouse_entered" from="Sprite6/Area2D6" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite6/Area2D6" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Water/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Water/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="toggled" from="ButtonSponge" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
